# Spectral

./: CMakeLists.txt  README.md  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  graph_legend.html  index.html  index.md  main_8cpp.html  main_8cpp__incl.md5
.github/workflows/: c-cpp.yml
docs/: config.in
docs/html/: globals.html  globals_func.html  graph_legend.html  main_8cpp.html
docs/html/search/: functions_0.js
docs/latex/: main_8cpp.tex  main_8cpp__incl.md5  refman.tex
html/: main_8cpp__incl.map
include/math/: math.hpp
include/mprocessor/: music.h
include/utils/: microphone.hpp  serial.hpp
search/: all_0.js  functions_0.js
src/: main.cpp
src/math/: math.cpp
src/mprocessor/: music.cpp
test/: globals.html  globals_func.html  index.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp__incl.md5
test/search/: searchdata.js
